--- a/src/components/Terminal/Numpad.module.css
+++ b/src/components/Terminal/Numpad.module.css
@@ -2,15 +2,11 @@
     width: 97%;
     height: 70px !important;
     font-size: 15px !important;
-    margin: 3%;
-    margin-left: 5px;
+    margin: 2px;
     border-radius: 0px !important;
 }
 
 
 .OK {
-    height: 142px !important;
-    position: relative !important;
-    bottom: 72.5px !important;
-    margin-left: 5px;
+    height: 144px !important;
 }
