--- a/src/components/Terminal/Terminal.module.css
+++ b/src/components/Terminal/Terminal.module.css
@@ -7,14 +7,28 @@
 
 }
 
-.ActionButton {
+.MainActionButton {
+    height: 60px !important;
     line-height: 2 !important;
     width: 90% !important;
     display: block !important;
     font-size: 17px !important;
     text-align: left !important;
     border-radius: 0px !important;
+    position: relative !important;
+    left: 15px !important
+}
 
+.ActionButton {
+    height: 60px !important;
+    line-height: 2 !important;
+    width: 90% !important;
+    display: block !important;
+    font-size: 17px !important;
+    text-align: left !important;
+    border-radius: 0px !important;
+    position: relative !important;
+    left: 15px !important
 }
 
 .NumpadButton {
@@ -29,13 +43,12 @@
 .POSButton {
     height: 60px !important;
     border-radius: 0px !important;
-
     width: 90%;
 }
 
 .ScrollButton {
-    width: 100% !important;
-    height: 98px !important;
+    width: 50px !important;
+    height: 80px !important;
     display: inline-block !important;
     border-radius: 0px !important;
 }
@@ -50,7 +63,6 @@
 
 
 .Panel {
-    margin-left: 5px !important;
     border-radius: 0px !important;
     background: white !important;
     position: relative !important;
@@ -64,15 +76,26 @@
 }
 
 .EvenRow {
+    font-weight: bold !important;
+    font-size: 17px;
+    color: #000000;
     background-color: white !important;
 }
 
 .OddRow {
-    background-color: rgba(127, 255, 212, 0.221) !important;
+    font-weight: bold !important;
+    font-size: 17px;
+    color: #000000;
+    background-color: #e1e1e13a !important;
 }
 
-.SelectedRow{
+.SelectedRow {
     font-weight: bold !important;
+    font-size: 17px;
     font-style: italic !important;
     color: black !important;
+}
+
+.SelectedRowBG {
+    background-color: rgba(115, 168, 189, 0.479) !important;
 }
