--- a/src/components/Terminal/Terminal.module.css
+++ b/src/components/Terminal/Terminal.module.css
@@ -12,7 +12,7 @@
     line-height: 2 !important;
     width: 95% !important;
     display: block !important;
-    font-size: 17px !important;
+    font-size: 16px !important;
     text-align: left !important;
     border-radius: 0px !important;
     position: relative !important;
@@ -24,7 +24,20 @@
     line-height: 2 !important;
     width: 100% !important;
     display: block !important;
-    font-size: 17px !important;
+    font-size: 16px !important;
+    text-align: left !important;
+    border-radius: 0px !important;
+    position: relative !important;
+    /* left: 15px !important */
+}
+
+
+.LongActionButton {
+    height: 100px !important;
+    line-height: 2 !important;
+    width: 100% !important;
+    display: block !important;
+    font-size: 15px !important;
     text-align: left !important;
     border-radius: 0px !important;
     position: relative !important;
