--- a/src/components/Terminal/Terminal.module.css
+++ b/src/components/Terminal/Terminal.module.css
@@ -99,7 +99,7 @@
     font-weight: bold !important;
     font-size: 17px;
     color: #000000;
-    background-color: #e1e1e13a !important;
+    background-color: #e1e1e1 !important;
 }
 
 .SelectedRow {
