--- a/src/components/Terminal/Terminal.module.css
+++ b/src/components/Terminal/Terminal.module.css
@@ -10,13 +10,13 @@
 .MainActionButton {
     height: 60px !important;
     line-height: 2 !important;
-    width: 95% !important;
+    width: 100% !important;
     display: block !important;
-    font-size: 16px !important;
+    font-size: 14px !important;
     text-align: left !important;
     border-radius: 0px !important;
     position: relative !important;
-    /* left: 15px !important */
+    left: 20px !important
 }
 
 .ActionButton {
@@ -28,7 +28,7 @@
     text-align: left !important;
     border-radius: 0px !important;
     position: relative !important;
-    /* left: 15px !important */
+    left: 15px !important
 }
 
 
@@ -41,7 +41,7 @@
     text-align: left !important;
     border-radius: 0px !important;
     position: relative !important;
-    /* left: 15px !important */
+    left: 15px !important
 }
 
 .NumpadButton {
